tests/algorithms/x/Elixir/web_programming/crawl_google_scholar_citation.out
warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 24 │       i = try do
    │       ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/web_programming/crawl_google_scholar_citation.exs:24:7: Main.is_digit/1

    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 67 │       i = try do
    │       ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/web_programming/crawl_google_scholar_citation.exs:67:7: Main.find_substring/2

     warning: variable "pos" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 100 │       {pos, result} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/web_programming/crawl_google_scholar_citation.exs:100:8: Main.extract_citation/1

     warning: variable "base_url" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 111 │   def get_citation(base_url, params) do
     │                    ~~~~~~~~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/web_programming/crawl_google_scholar_citation.exs:111:20: Main.get_citation/2

     warning: variable "params" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 111 │   def get_citation(base_url, params) do
     │                              ~~~~~~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/web_programming/crawl_google_scholar_citation.exs:111:30: Main.get_citation/2

     error: undefined variable "__name__"
     │
 121 │     if __name__ == "__main__" do
     │        ^^^^^^^^
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/web_programming/crawl_google_scholar_citation.exs:121:8: Main.main/0

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/web_programming/crawl_google_scholar_citation.exs: cannot compile module Main (errors have been logged)